1.4.0i2:
    Core & Setup:
    * 3648 FIX: Fixed log file parsing of host states...

    Checks & Agents:
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3914 FIX: Roles: Aliases are now unique during cloning

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...
    * 3531 Reduced Check_MK helper size for certain dists/python versions...
    * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
    * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
    * 3721 Host macros are now replaced in datasource program command lines...
    * 3853 cmk --list-tag can now also list offline hosts
    * 3806 Sped up "Activate changes"...
    * 3193 FIX: Fixed fake check results for hosts...
    * 3214 FIX: Removing SNMP checks for non SNMP hosts and agent based checks for non agent hosts...
    * 3220 FIX: Check_MK HW/SW Inventory is now always disabled for "No Agent" hosts
    * 3221 FIX: Fixed broken nagios config because of missing contact group check-mk-notify with rule based notifications enabled...
    * 3234 FIX: Make unixcat more robust...
    * 3275 FIX: Piggyback based services were skipped on "No agent hosts"...
    * 3286 FIX: Fixing possible logging issues when using datasource programs for monitoring...