@@ -3,6 +3,7 @@
     * 3648 FIX: Fixed log file parsing of host states...
 
     Checks & Agents:
+    * 3841 cups_queues: thresholds are now configurable in WATO...
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
 
